# Retro-Bot

./: .gitignore  CMakeLists.txt  command.txt
include/: cocos2dcpp.h
include/cocos/cocos2d-2.2.3/CocosDenshion/include/: SimpleAudioEngine.h
include/cocos/cocos2d-2.2.3/cocos2dx/: CCDirector.h
include/cocos/cocos2d-2.2.3/cocos2dx/base_nodes/: CCNode.h
include/cocos/cocos2d-2.2.3/cocos2dx/extensions/GUI/CCControlExtension/: CCControlColourPicker.h
include/cocos/cocos2d-2.2.3/cocos2dx/include/: cocos2d.h
include/cocos/cocos2d-2.2.3/cocos2dx/label_nodes/: CCLabelBMFont.h  CCLabelTTF.h
include/cocos/cocos2d-2.2.3/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h
include/cocos/cocos2d-2.2.3/cocos2dx/particle_nodes/: CCParticleSystem.h
include/cocos/cocos2d-2.2.3/cocos2dx/platform/android/jni/: JniHelper.h
include/cocos/cocos2d-2.2.3/cocos2dx/robtop/enums/: gjcustomcolormode.hpp
include/cocos/cocos2d-2.2.3/cocos2dx/robtop/layers/: flalertlayer.hpp  layers.hpp  levelinfolayer.hpp  menulayer.hpp  playlayer.hpp  scrollinglayer.hpp  sharelevellayer.hpp
include/cocos/cocos2d-2.2.3/cocos2dx/robtop/layers/editor/: customizeobjectlayer.hpp  drawgridlayer.hpp  editor.hpp  editorui.hpp  leveleditorlayer.hpp
include/cocos/cocos2d-2.2.3/cocos2dx/robtop/managers/: fmodaudioengine.hpp  gamemanager.hpp  gamesoundmanager.hpp
include/cocos/cocos2d-2.2.3/cocos2dx/robtop/objects/: gameobject.hpp  gjgamelevel.hpp  objects.hpp  playerobject.hpp  startposobject.hpp
include/cocos/cocos2d-2.2.3/cocos2dx/sprite_nodes/: CCSpriteBatchNode.h
include/cocos/cocos2d-2.2.3/cocos2dx/text_input_node/: CCTextFieldTTF.h
include/custom_nodes/: CCMenuItemExt.h
include/mod/: init.hpp  mod.hpp  save.hpp
include/other/: fallback.h  hooking.h
include/rbot/: MacroLoader.h  MacroSaver.h  PlayHitboxLayer.hpp  RBot.h  Toggler.h  tools.hpp
include/robtop/: AchievementManager.hpp  ButtonSpriteExtra.hpp  CCDropdown.hpp  CCMenuItemToggler.hpp  ColorPickerExtra.hpp  ColorSelectPopup.hpp  CustomLabelOptionsLayer.hpp  CustomSongLayer.hpp  DrawGridLayer.hpp  EditLevelLayer.hpp  EditorPauseLayer.hpp  EditorUI.hpp  FreeMoveOptionsLayer.hpp  GJGameLevel.hpp  GameManager.hpp  GameObject.hpp  HitboxLayer.hpp  HitboxOptionsLayer.hpp  LayoutOptionsLayer.hpp  LevelBrowserLayer.hpp  LevelEditorLayer.hpp  LevelInfoLayer.hpp  MenuLayer.hpp  ModLayer.hpp  MyLevelsLayer.hpp  NoclipTintOptionsLayer.hpp  ObjectInfoHandler.hpp  ObjectToolbox.hpp  PauseLayer.hpp  PivotEditorLayer.hpp  PlayLayer.hpp  PlayerObject.hpp  PlaytestLayer.hpp  SongFilterLayer.hpp  StartPosArray.hpp  UILayer.hpp
smali/com/robtopx/geometryjump/: GeometryJump.smali
smali/org/cocos2dx/lib/: Cocos2dxActivity.smali  Cocos2dxBitmap.smali  Cocos2dxEditText.smali  Cocos2dxGLSurfaceView.smali  Cocos2dxRenderer.smali  a.smali  b.smali  c.smali  d.smali  e.smali  f.smali  g.smali  h.smali  i.smali  j.smali  k.smali  l.smali  m.smali  n.smali  o.smali  p.smali  q.smali  r.smali  s.smali  t.smali
smali/org/fmod/: AudioDevice.smali  FMOD$PluginAudioDeviceCallback.smali  FMOD$PluginBroadcastReceiver.smali  FMOD.smali  MediaCodec.smali
src/: CCDropdown.cpp  CoderLayer.cpp  CustomLabelOptionsLayer.cpp  CustomSongLayer.cpp  EditorConfigurationsLayer.cpp  MacroLoader.cpp  MacroSaver.cpp  NoclipOptionsLayer.cpp  NoclipTintOptionsLayer.cpp  PlaytestLayer.cpp  RBot.cpp  SongFilterLayer.cpp  SongUploaderLayer.cpp  SpeedhackOptionsLayer.cpp  Toggler.cpp  UploadSongLayer.cpp  VCustomEncrypt.cpp  epic.cpp  include.h  main.cc  ndk.hpp
src/any-master/: test_shared_lib.cpp  test_shared_lib.hpp
src/custom_nodes/: CCMenuItemExt.cpp
src/features/: bot.cpp  button.cpp
src/version/1.0/: offsets.hpp
src/version/1.1/: offsets.hpp
src/version/1.2/: offsets.hpp
src/version/1.3/: offsets.hpp
src/version/1.4/: offsets.hpp
src/version/1.5/: offsets.hpp
src/version/1.6/: offsets.hpp
src/version/1.7/: offsets.hpp
src/version/1.8/: offsets.hpp
